--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 *.so
 *.dylib
 
+// Files that should never be in a repository
+.env
+
 # Test binary, built with `go test -c`
 *.test
 
@@ -13,3 +16,5 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+.idea/
+.vscode/
