Create Orders endpoints.

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 *.so
 *.dylib
 
-// Files that should never be in a repository
+# Files that should never be in a repository
 .env
 
 # Test binary, built with `go test -c`
